--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,7 @@ const { language, textDirection } = I18N;
 
     <!-- Comment the line below to disable View Transitions -->
     <ViewTransitions fallback="swap" />
+
   </head>
 
   <body class="antialiased text-default bg-page tracking-tight">
@@ -50,5 +51,7 @@ const { language, textDirection } = I18N;
         content-visibility: auto;
       }
     </style>
+
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
   </body>
 </html>
