--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -351,7 +351,6 @@ const metadata = {
     ]}
   />
 
-
   <!-- CallToAction Widget *********** -->
 
   <CallToAction id="get-started" backgroundImage={formBG}>
@@ -359,12 +358,56 @@ const metadata = {
       <h3 class="text-2xl font-bold tracking-tight text-primary-inverted dark:text-primary sm:text-3xl mb-2">
         Ready to take your business to the next level?
       </h3>
-      <div
-        class="calendly-inline-widget"
-        data-url="https://calendly.com/supergoodmarketing/30min?primary_color=059669"
-        style="min-width:320px;height:900px;"
-      >
-      </div>
+      <!-- Cal inline embed code begins -->
+      <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
+      <script type="text/javascript">
+        (function (C, A, L) {
+          let p = function (a, ar) {
+            a.q.push(ar);
+          };
+          let d = C.document;
+          C.Cal =
+            C.Cal ||
+            function () {
+              let cal = C.Cal;
+              let ar = arguments;
+              if (!cal.loaded) {
+                cal.ns = {};
+                cal.q = cal.q || [];
+                d.head.appendChild(d.createElement('script')).src = A;
+                cal.loaded = true;
+              }
+              if (ar[0] === L) {
+                const api = function () {
+                  p(api, arguments);
+                };
+                const namespace = ar[1];
+                api.q = api.q || [];
+                if (typeof namespace === 'string') {
+                  cal.ns[namespace] = cal.ns[namespace] || api;
+                  p(cal.ns[namespace], ar);
+                  p(cal, ['initNamespace', namespace]);
+                } else p(cal, ar);
+                return;
+              }
+              p(cal, ar);
+            };
+        })(window, 'https://app.cal.com/embed/embed.js', 'init');
+        Cal('init', 'disco', { origin: 'https://cal.com' });
+
+        Cal.ns.disco('inline', {
+          elementOrSelector: '#my-cal-inline',
+          config: { layout: 'month_view' },
+          calLink: 'supergoodsystems/disco',
+        });
+
+        Cal.ns.disco('ui', {
+          styles: { branding: { brandColor: '#000000' } },
+          hideEventTypeDetails: false,
+          layout: 'month_view',
+        });
+      </script>
+      <!-- Cal inline embed code ends -->
     </Fragment>
   </CallToAction>
 </Layout>
